k8s-local/istio/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: httproutes-to-istio-ingressgateway
  namespace: istio-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: web
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: api
  to:
    - group: ""
      kind: Service
      name: istio-ingressgateway
